syntax = "proto3";

import "google/protobuf/any.proto";
import "sp/DacPlayer.proto";

package com.spotify.home.dac.component.v1.proto;

option java_multiple_files = true;
option java_package = "com.spotify.home.dac.component.v1.proto";

message ToolbarComponent {
  string day_part_message = 1;
  string subtitle = 2;
  repeated google.protobuf.Any items = 4;
}

message ToolbarItemFeedComponent {
  string title = 1;
  string navigate_uri = 2;
}

message ToolbarItemListeningHistoryComponent {
  string title = 1;
  string navigate_uri = 2;
}

message ToolbarItemSettingsComponent {
  string title = 1;
  string navigate_uri = 2;
}